# ChangeLog for app-arch/file-roller
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.139 2005/09/17 15:12:28 kloeri Exp $

*file-roller-2.12.0 (09 Sep 2005)

  09 Sep 2005; John N. Laliberte <allanonjl@gentoo.org>
  -file-roller-2.11.92.ebuild, +file-roller-2.12.0.ebuild:
  2.12 release vbump

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> file-roller-2.10.4.ebuild:
  Stable on ppc64

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  file-roller-2.10.4.ebuild:
  Stable on ppc.

  28 Aug 2005; Simon Stelling <blubb@gentoo.org> file-roller-2.10.4.ebuild:
  stable on amd64

  27 Aug 2005; Guy Martin <gmsoft@gentoo.org> file-roller-2.10.4.ebuild:
  Stable on hppa.

  26 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  file-roller-2.10.4.ebuild:
  Stable on sparc

*file-roller-2.11.92 (26 Aug 2005)

  26 Aug 2005; John N. Laliberte <allanonjl@gentoo.org>
  -file-roller-2.11.91.ebuild, +file-roller-2.11.92.ebuild:
  new version

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> file-roller-2.10.4.ebuild:
  stable on ia64

  25 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  file-roller-2.10.4.ebuild:
  Stable on x86.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> file-roller-2.10.3.ebuild:
  stable on ia64

*file-roller-2.11.91 (18 Aug 2005)

  18 Aug 2005; John N. Laliberte <allanonjl@gentoo.org>
  +file-roller-2.11.91.ebuild:
  new version, get rid of omf fix, workaround for sandbox violations not
  necessary anymore.

  09 Aug 2005; Markus Rothe <corsair@gentoo.org> file-roller-2.10.3.ebuild:
  Stable on ppc64

  02 Aug 2005; Simon Stelling <blubb@gentoo.org> file-roller-2.10.3.ebuild:
  stable on amd64

  31 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  file-roller-2.10.3.ebuild:
  ppc stable

  27 Jul 2005; Guy Martin <gmsoft@gentoo.org> file-roller-2.10.3.ebuild:
  Stable on hppa.

  26 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>