@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/file-roller
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.139 2005/09/17 15:12:28 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.140 2005/09/17 15:58:39 agriffis Exp $
+
+  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> file-roller-2.10.4.ebuild,
+  file-roller-2.12.0.ebuild:
+  Mark 2.12.0 2.10.4 ~alpha
 
 *file-roller-2.12.0 (09 Sep 2005)
 
